# aleph.github.io

./: .gitignore  AGENTS.md  CLAUDE.md  DECLARATION_2024.md  LICENSE  LICENSES.md  ODE.md  OPERATIONS.md  PLAN.md  PLAN_CHANGELOG.md  PROGRESS.md  README.en.md  README.md  pyproject.toml
aleph/: __init__.py  cli.py  pipeline.py
audits/: M0_audit.md  M7_audit.md  M8_audit.md
config/: budgets.yaml  instruments.yaml  llama-swap.yaml  models.yaml  policies.yaml  publish.yaml
corpus/: README.md
designs/: corpus-expansion.md  critic-role.md  formal-audit-runbook.md  instruments.md  next-designer-execution-plan.md  phase2-deep-interpretation.md  phase3-experiment-evaluation.md  phase4-w0009-l2-era-intervention.md  phase5-instruments-atlas-budget.md  public-site.md  transition-commit.md  ui.md  w0008-material-ablation.md
docs/: about.html  archive.html  declaration.html  dialogue.html  index.html  llms.txt  ode.html  poetics-v0.html  poetics-v1.html  poetics.html
poetics/: README.md  cadence_state.json  history.jsonl  poetics.md
reports/: CLAUDE_MIDTERM_REVIEW_20260717.md  CLAUDE_REPO_INSIGHTS_20260717.md  CODEX_AUDIT_20260708_081541.md  CODEX_AUDIT_20260708_094819.md  CODEX_AUDIT_20260708_105020.md  CODEX_AUDIT_20260708_105528.md  CODEX_AUDIT_20260708_110310.md  CODEX_AUDIT_20260708_111512.md  CODEX_AUDIT_20260710_072510.md  CORPUS_COVERAGE_20260717.md  CORPUS_COVERAGE_METADATA_20260717.md  CORPUS_COVERAGE_SAMPLE_20260717.md  CRITIC_ROLE_REVIEW_20260717.md  CRITIQUE_FABLE5_CHAT_expE_20260713.md  CRITIQUE_FABLE5_CHAT_poeticsreview_20260718.md  CRITIQUE_FABLE5_CHAT_w0004_20260712.md  CRITIQUE_FABLE5_CHAT_w0005_20260713.md  CRITIQUE_FABLE5_CHAT_w0005review_20260713.md  CRITIQUE_FABLE5_CHAT_w0006review_20260716.md  CRITIQUE_FABLE5_CHAT_w0007review_20260717.md  CRITIQUE_FABLE5_CHAT_w0008_20260718.md  DESIGNER_INSIGHTS_20260714.md  DESIGNER_INSIGHTS_20260718.md  EN_L1_selfconcept_note.md  EXP_L1_interrogation_20260712.md  EXP_house_style_20260717.md  EXP_intent_attractor_20260712.md  (+37 more)
(+434 files in other folders)
