[project]
name = "aleph"
version = "0.0.1"
description = "ALEPH — LLMによる文学表現のための自律制作システム (PLAN.md参照)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
explore = [
    # M1で使用（施工者が追加確定する。PLAN §4.1-4.2）
    # "qdrant-client", "sentence-transformers", "hdbscan",
]

[project.scripts]
aleph = "aleph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aleph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "m0: M0受入基準。施工対象であり、施工完了時に緑になる（監査の照合表）。",
    "local: RTX 3090上のローカル推論が必要。ALEPH_LOCAL=1 で有効化。",
]
# 既定では設計不変条件テストのみ実行（現時点で緑であるべきもの）。
# 施工者・監査者は `pytest -m m0` でM0受入基準を実行する。
addopts = "-m 'not m0 and not local'"
