[project]
name = "aleph"
version = "0.0.1"
description = "ALEPH — LLMによる文学表現のための自律制作システム (PLAN.md参照)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    # M1 探索層（PLAN_CHANGELOG 0.7.2: プレーン索引方式。ベクタDB・torch不要）
    "numpy>=1.26",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
aleph = "aleph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aleph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "m0: M0受入基準。施工対象であり、施工完了時に緑になる（監査の照合表）。",
    "m1: M1受入基準（ロジック契約）。実ランはaleph exploreと監査で検証。",
    "m2: M2受入基準（ロジック契約）。質的判定は実ラン+監査で検証。",
    "m3: M3受入基準（ロジック契約）。実ランは統合時に検証。",
    "local: RTX 3090上のローカル推論が必要。ALEPH_LOCAL=1 で有効化。",
]
# 既定では設計不変条件テストのみ実行（現時点で緑であるべきもの）。
# 施工者・監査者は `pytest -m m0` / `pytest -m m1` 等で各受入基準を実行する。
addopts = "-m 'not m0 and not m1 and not m2 and not m3 and not local'"
